WIP: migration to Xtext 2.5, still problems with genmodel/xcore generation